# SistemPakar_DiagnosisLaptop

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  dokumentasi.html
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: create_admin.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  diagnosis.py  gejala.py  history.py  kerusakan.py  router.py  rules.py
backend/app/core/: config.py  database.py  security.py
backend/app/data/: knowledge_base.json  seed.sql
backend/app/engine/: certainty_factor.py  forward_chain.py
backend/app/models/: diagnosis_history.py  gejala.py  kerusakan.py  rule.py  user.py
backend/app/schemas/: diagnosis.py  gejala.py  kerusakan.py  rule.py  user.py
backend/app/services/: diagnosis_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/admin/: layout.tsx
frontend/app/admin/gejala/: page.tsx
frontend/app/admin/history/: page.tsx
frontend/app/admin/kerusakan/: page.tsx
frontend/app/admin/rules/: page.tsx
frontend/app/diagnosis/: page.tsx
frontend/components/diagnosis/: DiagnosisResult.tsx  MultiCategorySelector.tsx  QuestionWizard.tsx
frontend/lib/: api.ts  gejalaCache.ts  store.ts  utils.ts
frontend/types/: index.ts
